fixed tap & score

--- a/public/flappy_quakks/index.html
+++ b/public/flappy_quakks/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Flappy Quakks</title>
-  <link rel="stylesheet" href="/flappy_quakks/style.css" />
+
+  <!-- ensure relative paths resolve under /flappy_quakks/ -->
+  <base href="/flappy_quakks/">
+
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- 
-    We force the canvas to render at its native resolution,
-    then pixelate it for that retro feel.
-  -->
   <canvas
     id="gameCanvas"
     width="288"
@@ -20,7 +20,7 @@
 
   <!-- Telegram Game SDK -->
   <script async src="https://telegram.org/js/telegram-web-app.js"></script>
-  <!-- Our updated game logic -->
-  <script src="/flappy_quakks/script.js"></script>
+  <!-- game logic -->
+  <script src="script.js"></script>
 </body>
 </html>
