--- a/public/flappy_quakks/index.html
+++ b/public/flappy_quakks/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- lock viewport scale -->
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+  />
   <title>Flappy Quakks</title>
 
   <!-- ensure relative paths resolve under /flappy_quakks/ -->
-  <base href="/flappy_quakks/">
+  <base href="/flappy_quakks/" />
 
   <link rel="stylesheet" href="style.css" />
 </head>
