--- a/public/flappy_quakks/index.html
+++ b/public/flappy_quakks/index.html
@@ -32,7 +32,8 @@
   <canvas id="gameCanvas"></canvas>
 
   <script async src="https://telegram.org/js/telegram-web-app.js"></script>
-  <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
+
 
   <!-- keep your Cloudflare anti-bot iframe snippet if you need it -->
   <script>(function(){ /* …Cloudflare snippet… */ })();</script>
