--- a/public/flappy_quakks/index.html
+++ b/public/flappy_quakks/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+
+
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -30,6 +32,11 @@
 </head>
 <body>
   <canvas id="gameCanvas"></canvas>
+  <div id="orientation-overlay">
+    📱<br>
+    Please rotate your device<br>
+    back to portrait mode to play.
+  </div>
 
   <script async src="https://telegram.org/js/telegram-web-app.js"></script>
   <script type="module" src="script.js"></script>
